fix ig-51 ig-100

--- a/source/dialogs/zone-track-properties/zone-track-properties-modal.html
+++ b/source/dialogs/zone-track-properties/zone-track-properties-modal.html
@@ -40,7 +40,7 @@
                                 <label class="control-label col-sm-5 padding-left-3em" for="track-background">Track background</label>
                                 <div class="col-sm-7">
                                     <div class="float-left">
-                                        <button ng-click="wiModal.trackBackground();"
+                                        <button type="button" ng-click="wiModal.trackBackground();"
                                                 ng-style="{'background-color':wiModal.trackColor}"
                                                 class="form-control wi-form-control width-80px thick-border">
                                         </button>
