--- a/source/dialogs/color-picker/color-picker-modal.html
+++ b/source/dialogs/color-picker/color-picker-modal.html
@@ -37,7 +37,7 @@
               <label for="" class="control-label">Define Custom Colors</label>
               <div id='cp-container'></div>
               <div class="container-fluid">
-                <button style="margin: 10px auto 0px auto;" ng-click="wiModal.addToCustom()" class="btn btn-success col-sm-12">
+                <button type="button" style="margin: 10px auto 0px auto;" ng-click="wiModal.addToCustom()" class="btn btn-success col-sm-12">
                   <span class="fa fa-lg fa-arrow-circle-left"></span> Add to custom
                 </button>
               </div>
