--- a/source/dialogs/depth-track-properties/depth-track-properties-modal.html
+++ b/source/dialogs/depth-track-properties/depth-track-properties-modal.html
@@ -44,7 +44,7 @@
                                     <label class="control-label col-sm-5 normal-text" for="track-background">Track background</label>
                                     <div class="col-sm-7">
                                         <div class="float-left">
-                                            <button ng-click="wiModal.trackBackground();"
+                                            <button type="button" ng-click="wiModal.trackBackground();"
                                                     ng-style="{'background-color':wiModal.props.trackBackground}"
                                                     class="form-control wi-form-control width-80px thick-border">
                                             </button>
