--- a/source/dialogs/crossplot-for-object-track/crossplot-for-object-track-modal.html
+++ b/source/dialogs/crossplot-for-object-track/crossplot-for-object-track-modal.html
@@ -38,7 +38,7 @@
                                     ng-change="wiModal.onselectedCurveXChange()"
                                     class="normal-text">
                                     <ui-select-match placeholder='Select a curve'>{{wiModal.SelectedCurveX.name}}</ui-select-match>
-                                    <ui-select-choices
+                                    <ui-select-choices group-by="'datasetName'"
                                     repeat='curve in wiModal.curvesArr | filter:{ name : $select.search } track by curve.idCurve'>
                                         <div class="padding-left-20px">{{curve.name}}</div>
                                     </ui-select-choices>
@@ -80,7 +80,7 @@
                                     ng-change="wiModal.onselectedCurveYChange()"
                                     class="normal-text">
                                     <ui-select-match placeholder='Select a curve'>{{wiModal.SelectedCurveY.name}}</ui-select-match>
-                                    <ui-select-choices
+                                    <ui-select-choices group-by="'datasetName'"
                                     repeat='curve in wiModal.curvesArr | filter:{ name : $select.search } track by curve.idCurve'>
                                         <div class="padding-left-20px">{{curve.name}}</div>
                                     </ui-select-choices>
@@ -122,7 +122,7 @@
                                     ng-change="wiModal.onselectedCurveZChange()"
                                     class="normal-text">
                                     <ui-select-match placeholder='Select a curve'>{{wiModal.SelectedCurveZ.name}}</ui-select-match>
-                                    <ui-select-choices
+                                    <ui-select-choices group-by="'datasetName'"
                                     repeat='curve in wiModal.curvesArr | filter:{ name : $select.search } track by curve.idCurve'>
                                         <div class="padding-left-20px">{{curve.name}}</div>
                                     </ui-select-choices>
