--- a/source/dialogs/crossplot-for-object-track/crossplot-for-object-track-modal.html
+++ b/source/dialogs/crossplot-for-object-track/crossplot-for-object-track-modal.html
@@ -273,6 +273,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" ng-click="wiModal.onOkButtonClicked()" ng-disabled="wiModal.isNotValid()" class="btn btn-default"><span class="ok-16x16"></span>&nbsp;OK</button>
+                <button type="button" ng-click="wiModal.onApplyButtonClicked()" ng-hide="wiModal.dragToCreate" ng-disabled="wiModal.isNotValid()" class="btn btn-default"><span class="ok-16x16"></span>&nbsp;Apply</button>
                 <button type="button" ng-click="wiModal.onCancelButtonClicked()" class="btn btn-default"><span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
