--- a/source/dialogs/histogram-for-object-track/histogram-for-object-track-modal.html
+++ b/source/dialogs/histogram-for-object-track/histogram-for-object-track-modal.html
@@ -130,6 +130,9 @@
                 <button type="button" ng-click="wiModal.onOKButtonClicked();" class="btn btn-default" ng-disabled="wiModal.isNotValid();">
                     <span class="ok-16x16"></span>&nbsp;Ok
                 </button>
+                <button type="button" ng-click="wiModal.onApplyButtonClicked();" ng-hide="wiModal.histogramProps.dragToCreate" class="btn btn-default" ng-disabled="wiModal.isNotValid();">
+                    <span class="ok-16x16"></span>&nbsp;Apply
+                </button>
                 <button type="button" ng-click="wiModal.onCancelButtonClicked();" class="btn btn-default">
                     <span class="close-16x16"></span>&nbsp;Close
                 </button>
