--- a/source/dialogs/prompt/prompt-modal.html
+++ b/source/dialogs/prompt/prompt-modal.html
@@ -2,7 +2,7 @@
 	<div class='modal-dialog'>
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" ng-click="wiModal.close(null)" aria-hidden="true">&times;</button>
+				<button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
 				<h4 ng-bind-html="wiModal.title"></h4>
 			</div>
 			<div class="modal-body text-center">
