--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -187,15 +187,16 @@
                                     <table class="text-on-table table table-bordered curveTable">
                                         <thead>
                                             <tr>
-                                                <td><strong>Curve</strong></td>
-                                                <td><strong>Alias</strong></td>
-                                                <td style="width: 10%"><strong>Left Scale</strong></td>
-                                                <td style="width: 10%"><strong>Right Scale</strong></td>
-                                                <td><strong>Log/Linear</strong></td>
-                                                <td><strong>Display Mode</strong></td>
-                                                <td><strong>Line Style</strong></td>
-                                                <td><strong>Symbol Style</strong></td>
-                                                <td><strong>Display As</strong></td>
+                                                <th>Curve</th>
+                                                <th>Alias</th>
+                                                <th style="width: 10%">Left Scale</th>
+                                                <th style="width: 10%">Right Scale</th>
+                                                <th>Log/Linear</th>
+                                                <th>Display Mode</th>
+                                                <th>Line/Symbol Style</th>
+                                                <!-- <td><strong>Symbol Style</strong></td> -->
+                                                <th>Display As</th>
+                                                <th></th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -203,75 +204,91 @@
                                                 ng-class="{selected:$index == selectedRowCurve}"
                                                 ng-click="wiModal.setClickedRowCurve($index)">
                                                 <td style="width: 12%">
-                                                    <select ng-model="wiModal.lineCurve[curve._index].id"
+                                                    <!-- <select ng-model="wiModal.lineCurve[curve._index].id"
                                                             name="curveName"
                                                             class="form-control wi-form-control"
                                                             ng-options="item.id as item.datasetCurve for item in wiModal.curvesArr"
                                                             ng-change="wiModal.onSelectCurve();"
-                                                            ng-disabled="wiModal.setDisabledCurve(curve._index)"></select>
+                                                            ng-disabled="wiModal.setDisabledCurve(curve._index)"></select> -->
+                                                    <ui-select ng-model="curve.lineCurve"
+                                                                ng-change="wiModal.onSelectCurve(); wiModal.onChangeCurve(curve._index);">
+                                                        <ui-select-match placeholder='Select a curve'>{{curve.lineCurve.properties.name}}</ui-select-match>
+                                                        <ui-select-choices group-by="'datasetName'"
+                                                                    repeat='c as c in wiModal.curvesArr | filter: $select.search'>
+                                                                    <div class="padding-left-20px">{{c.properties.name}}</div>
+                                                        </ui-select-choices>
+                                                    </ui-select>
                                                 </td>
 
                                                 <td>
                                                     <input type="text" ng-model="curve.alias"
                                                            class="form-control wi-form-control"
-                                                           ng-change="wiModal.onChangeCurve($index);"
-                                                           ng-disabled="!wiModal.lineCurve[curve._index].id">
+                                                           ng-change="wiModal.onChangeCurve(curve._index);">
                                                 </td>
                                                 <td>
                                                     <input type="number" ng-model="curve.minValue" step="any"
                                                            class="form-control wi-form-control"
-                                                           ng-change="wiModal.onChangeCurve($index);"
-                                                           ng-disabled="!wiModal.lineCurve[curve._index].id">
+                                                           ng-change="wiModal.onChangeCurve(curve._index);">
                                                 </td>
                                                 <td>
                                                     <input type="number" ng-model="curve.maxValue" step="any"
                                                            class="form-control wi-form-control"
-                                                           ng-change="wiModal.onChangeCurve($index);"
-                                                           ng-disabled="!wiModal.lineCurve[curve._index].id">
+                                                           ng-change="wiModal.onChangeCurve(curve._index);">
                                                 </td>
                                                 <td>
-                                                    <select ng-model="curve.displayType" name="log"
+                                                    <select ng-model="curve.displayType"
                                                             value="" class="form-control wi-form-control"
                                                             ng-options="item for item in wiModal.logLinear track by item"
-                                                            ng-change="wiModal.onChangeCurve($index);"
-                                                            ng-disabled="!wiModal.lineCurve[curve._index].id"></select>
+                                                            ng-change="wiModal.onChangeCurve(curve._index);"></select>
                                                 </td>
                                                 <td>
                                                     <select ng-model="curve.displayMode" name="displayMode"
                                                             value="" class="form-control wi-form-control"
                                                             ng-options="item for item in wiModal.displayMode track by item"
-                                                            ng-change="wiModal.onChangeCurve($index);"
-                                                            ng-disabled="!wiModal.lineCurve[curve._index].id"></select>
+                                                            ng-change="wiModal.onChangeCurve(curve._index);"></select>
                                                 </td>
                                                 <td>
-                                                    <input ng-model="curve.lineOptions"
+                                                    <!-- <input ng-model="curve.lineOptions"
                                                             type="button" value="Edit..." id="editLine"
                                                             class="form-control wi-form-control"
-                                                            ng-click="wiModal.lineStyleButtonClicked($index, $event); wiModal.onChangeCurve($index);"
-                                                            ng-disabled="!wiModal.lineCurve[curve._index].id || (curve.displayMode == 'Symbol' || curve.displayMode == 'None')">
+                                                            ng-click="wiModal.lineStyleButtonClicked($index, $event); wiModal.onChangeCurve(curve._index);"
+                                                            ng-disabled="!wiModal.lineCurve[curve._index].id || (curve.displayMode == 'Symbol' || curve.displayMode == 'None')"> -->
+                                                    <button type="button" 
+                                                            ng-click="wiModal.onEditDisplayModeButtonClicked($index, $event)"
+                                                            ng-disabled="curve.displayMode =='None'"
+                                                            class="btn btn-default wi-form-control" 
+                                                            style="font-size: 10px; width: 100%">Edit</button>
                                                 </td>
-                                                <td>
+                                                <!-- <td>
                                                     <input ng-model="curve.symbolOptions"
                                                             type="button" value="Edit..." id="editSymbol"
                                                             class="form-control wi-form-control"
-                                                            ng-click="wiModal.symbolStyleButtonClicked($index, $event); wiModal.onChangeCurve($index);"
+                                                            ng-click="wiModal.symbolStyleButtonClicked($index, $event); wiModal.onChangeCurve(curve._index);"
                                                             ng-disabled="!wiModal.lineCurve[curve._index].id || (curve.displayMode == 'Line' || curve.displayMode == 'None')">
-                                                </td>
+                                                </td> -->
                                                 <td>
                                                     <select ng-model="curve.displayAs" name="displayAs"
                                                             value="" class="form-control wi-form-control"
                                                             ng-options="item for item in wiModal.displayAs track by item"
-                                                            ng-change="wiModal.onChangeCurve($index);"
-                                                            ng-disabled="!wiModal.lineCurve[curve._index].id"></select>
+                                                            ng-change="wiModal.onChangeCurve(curve._index);"></select>
+                                                </td>
+                                                <td>
+                                                    <!-- <input type="button" class="btn btn-default" 
+                                                            ng-click="wiModal.removeRowCurve(curve._index)"/> -->
+                                                    <button class="btn btn-default wi-form-control" 
+                                                            ng-click="wiModal.removeRowCurve(curve._index);"
+                                                            style="font-size: 10px; width: 100%">
+                                                        <span class="delete-16x16"></span>
+                                                    </button>
                                                 </td>
                                             </tr>
                                         </tbody>
                                     </table>
                                 </div>
                                 <div class="width-5-percent float-left padding-left-5px">
-                                    <button class="btn btn-default" ng-click="wiModal.removeRowCurve();">
+                                    <!-- <button class="btn btn-default" ng-click="wiModal.removeRowCurve();">
                                         <span class="delete-16x16"></span>
-                                    </button>
+                                    </button> -->
                                     <button class="btn btn-default" ng-click="wiModal.addRowCurve();">
                                         <span class="plus-16x16"></span>
                                     </button>
@@ -304,22 +321,38 @@
                                                 ng-class="{'selected':$index == selectedRowShading}"
                                                 ng-click="wiModal.setClickedRowShading($index)">
                                                 <td>
-                                                    <select ng-model="shading.idRightLine" name="curveName"
+                                                    <!-- <select ng-model="shading.idRightLine" name="curveName"
                                                             class="form-control wi-form-control"
                                                             ng-options="item.id as item.datasetCurve for item in wiModal.curvesOnDataset"
                                                             ng-change="wiModal.onChangeShading($index);wiModal.setShadingName(shading.idRightLine, shading.idLeftLine, shading._index);">
                                                         <option></option>
-                                                    </select>
+                                                    </select> -->
+                                                    <ui-select ng-model="shading.rightLine"
+                                                                ng-change="wiModal.onChangeShading(shading._index);">
+                                                        <ui-select-match placeholder='Select a curve'>{{shading.rightLine.name}}</ui-select-match>
+                                                        <ui-select-choices group-by="'datasetName'"
+                                                                    repeat='c as c in wiModal.curveList | filter: $select.search'>
+                                                                    <div class="padding-left-20px">{{c.name}}</div>
+                                                        </ui-select-choices>
+                                                    </ui-select>
                                                 </td>
                                                 <td>
-                                                    <select ng-model="shading.idLeftLine"
+                                                    <!-- <select ng-model="shading.idLeftLine"
                                                             class="form-control wi-form-control"
                                                             ng-options="item.id as item.datasetCurve for item in wiModal.leftLimit"
                                                             ng-change="wiModal.onChangeShading($index);
                                                              shading.leftFixedValue = null; wiModal.validate(shading._index); wiModal.setFillDisplay(shading._index); wiModal.setLimit2(shading._index);wiModal.setShadingName(shading.idRightLine, shading.idLeftLine, shading._index);"
-                                                            ng-disabled="!shading.idRightLine">
+                                                            ng-disabled="!shading.idRightLine"> -->
                                                         <!-- <option value="{{item.id}}" ng-repeat="item in wiModal.curvesOnDataset">{{item.datasetCurve}}</option> -->
-                                                    </select>
+                                                    <!-- </select> -->
+                                                    <ui-select ng-model="shading.leftLine"
+                                                                ng-change="wiModal.onChangeShading(shading._index);">
+                                                        <ui-select-match placeholder='Select a curve'>{{shading.leftLine.name}}</ui-select-match>
+                                                        <ui-select-choices group-by="'datasetName'"
+                                                                    repeat='c as c in wiModal.curveList | filter: $select.search'>
+                                                                    <div class="padding-left-20px">{{c.name}}</div>
+                                                        </ui-select-choices>
+                                                    </ui-select>
                                                 </td>
                                                 <td>
                                                     <input type="number" ng-model="shading.leftFixedValue"
