update histogram title

--- a/source/dialogs/histogram-format/histogram-format-modal.html
+++ b/source/dialogs/histogram-format/histogram-format-modal.html
@@ -154,13 +154,13 @@
                         <div class="padding-1em container-fluid">
                             <div class="row">
                                 <form class='col-sm-12 form-horizontal form-condensed'>
-                                    <div id="histogramname">
-                                        <h5>Histogram Name</h5>
+                                    <div id="histogramtitle">
+                                        <h5>Histogram Title</h5>
                                         <div class="col-sm-offset-1 col-sm-11 container-fluid">
                                             <div class="form-group">
-                                                <label class="col-sm-3">Histogram Name</label>
+                                                <label class="col-sm-3">Histogram Title</label>
                                                 <div class="col-sm-3">
-                                                    <input type="text" class="form-control wi-form-control" ng-model="wiModal.histogramProps.name">
+                                                    <input type="text" class="form-control wi-form-control" ng-model="wiModal.histogramProps.histogramTitle">
                                                 </div>
                                                 <div class="col-sm-6"></div>
                                             </div>
