--- a/source/dialogs/curve-filter/curve-filter-modal.html
+++ b/source/dialogs/curve-filter/curve-filter-modal.html
@@ -15,8 +15,8 @@
                                 <div class='form-group'>
                                     <label class="col-sm-2">Select well</label>
                                     <div class="col-sm-10">
-                                        <select class="form-control wi-form-control" ng-model="wiModal.selectedWell" ng-options="well as well.properties.name for well in wiModal.wells "
-                                            ng-change="wiModal.onWellChange()">
+                                        <select class="form-control wi-form-control" ng-model="wiModal.SelectedWell" ng-options="well as well.properties.name for well in wiModal.wells "
+                                            ng-change="wiModal.onChangeWell()">
                                         </select>
                                     </div>
                                 </div>
@@ -28,14 +28,14 @@
                                 <div class="form-group">
                                     <label class="col-sm-2">Top Depth</label>
                                     <div class="col-sm-3">
-                                        <input class="form-control wi-form-control" type="number" ng-model="wiModal.topDepth" step="any" min='{{wiModal.selectedWell.properties.topDepth}}'>
+                                        <input class="form-control wi-form-control" type="number" ng-model="wiModal.topDepth" step="any" min='{{wiModal.SelectedWell.properties.topDepth}}'>
                                     </div>
                                     <label class="col-sm-2">Botton Depth</label>
                                     <div class="col-sm-3">
-                                        <input ng-model="wiModal.bottomDepth" type="number" class="form-control wi-form-control" step="any" max='{{wiModal.selectedWell.properties.bottomDepth}}'>
+                                        <input ng-model="wiModal.bottomDepth" type="number" class="form-control wi-form-control" step="any" max='{{wiModal.SelectedWell.properties.bottomDepth}}'>
                                     </div>
                                     <div class="col-sm-2">
-                                        <button class="btn btn-default wi-form-control width-100-percent" ng-click="wiModal.clickDefault()">Default</button>
+                                        <button class="btn btn-default wi-form-control width-100-percent" ng-click="wiModal.defaultDepthButtonClick()">Default</button>
                                     </div>
                                 </div>
                             </div>
@@ -46,16 +46,26 @@
                                 <div class='form-group'>
                                     <label class="col-sm-2">Input Curve</label>
                                     <div class="col-sm-10">
-                                        <select></select>
+                                        <ui-select ng-model="wiModal.SelectedCurve" class="normal-text">
+                                            <ui-select-match placeholder='Select a curve'>{{wiModal.SelectedCurve.properties.name}}</ui-select-match>
+                                            <ui-select-choices group-by="'datasetName'"
+                                            repeat='curve in wiModal.curvesArr | filter:{properties: {name:$select.search}} track by curve.id'>
+                                                <div class="padding-left-20px">{{curve.properties.name}}</div>
+                                            </ui-select-choices>
+                                        </ui-select>
                                     </div>
                                 </div>
                                 <div class='form-group'>
                                     <label class="col-sm-2">Options</label>
                                     <div class="col-sm-5">
-                                        <input type="radio" name='createOp' value="backup" ng-model="wiModal.createOp">&nbsp;Create Backup Curve
+                                        <label>
+                                            <input type="radio" name='createOp' value="backup" ng-model="wiModal.createOp">&nbsp;Create Backup Curve
+                                        </label>
                                     </div>
                                     <div class="col-sm-5">
-                                        <input type="radio" name='createOp' value="new" ng-model="wiModal.createOp">&nbsp;Create New/Overwrite Curve
+                                        <label>
+                                            <input type="radio" name='createOp' value="new" ng-model="wiModal.createOp">&nbsp;Create New/Overwrite Curve
+                                        </label>
                                     </div>
                                 </div>
                             </div>
@@ -66,46 +76,58 @@
                                 <label>Select filter method:</label>
                                 <div class="form-group">
                                     <div class="col-sm-5">
-                                        <input type="radio" name="filterOp" value="1" ng-model="wiModal.filterOp">&nbsp;Square
+                                        <label>
+                                            <input type="radio" name="filterOp" value="1" ng-model="wiModal.filterOp">&nbsp;Square
+                                        </label>
                                     </div>
                                     <div class="col-sm-5">
-                                        <input type="radio" name="filterOp" value="2" ng-model="wiModal.filterOp">&nbsp;Savitsky-Golay
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="col-sm-5">
-                                        <input type="radio" name="filterOp" value="3" ng-model="wiModal.filterOp">&nbsp;Bell
-                                    </div>
-                                    <div class="col-sm-5">
-                                        <input type="radio" name="filterOp" value="4" ng-model="wiModal.filterOp">&nbsp;Fast Fourie transform
+                                        <label>
+                                            <input type="radio" name="filterOp" value="2" ng-model="wiModal.filterOp">&nbsp;Savitsky-Golay
+                                        </label>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="col-sm-5">
-                                        <input type="radio" name="filterOp" value="5" ng-model="wiModal.filterOp">&nbsp;Median
+                                        <label>
+                                            <input type="radio" name="filterOp" value="3" ng-model="wiModal.filterOp">&nbsp;Bell
+                                        </label>
                                     </div>
                                     <div class="col-sm-5">
-                                        <input type="radio" name="filterOp" value="6" ng-model="wiModal.filterOp">&nbsp;User define(Compelete Table)
+                                        <label>
+                                            <input type="radio" name="filterOp" value="4" ng-model="wiModal.filterOp">&nbsp;Fast Fourie transform
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-sm-5">
+                                        <label>
+                                            <input type="radio" name="filterOp" value="5" ng-model="wiModal.filterOp">&nbsp;Median
+                                        </label>
+                                    </div>
+                                    <div class="col-sm-5">
+                                        <label>
+                                            <input type="radio" name="filterOp" value="6" ng-model="wiModal.filterOp">&nbsp;User define(Compelete Table)
+                                        </label>
                                     </div>
                                 </div>
                                 <div class="form-group" ng-if="wiModal.filterOp!='2'">
                                     <label class="col-sm-5">Number of levels (must be odd):</label>
                                     <div class="col-sm-5">
-                                        <input type="number" ng-model="wiModal.numLevel" step="1" min='1'>
+                                        <input type="number" class="form-control wi-form-control" ng-model="wiModal.numLevel" step="1" min='1'>
                                     </div>
                                 </div>
                                 <div class="form-group" ng-if="wiModal.filterOp=='2'">
                                     <label class="col-sm-2">Polynomial Order:</label>
                                     <div class="col-sm-2">
-                                        <input type="number" ng-model="wiModal.polyOder" step="1">
+                                        <input type="number" class="form-control wi-form-control" ng-model="wiModal.polyOder" step="1">
                                     </div>
                                     <label class="col-sm-2">Derivative Order:</label>
                                     <div class="col-sm-2">
-                                        <input type="number" ng-model="wiModal.devOrder" step="1">
+                                        <input type="number" class="form-control wi-form-control" ng-model="wiModal.devOrder" step="1">
                                     </div>
                                     <label class="col-sm-2">Number Points:</label>
                                     <div class="col-sm-2">
-                                        <input type="number" ng-model="wiModal.numPoints" step="1">
+                                        <input type="number" class="form-control wi-form-control" ng-model="wiModal.numPoints" step="1">
                                     </div>
                                 </div>
                             </div>
@@ -116,11 +138,15 @@
                                 <div class="form-group">
                                     <label class="col-sm-2">Dataset</label>
                                     <div class="col-sm-4">
-                                        <select name="" id=""></select>
+                                        <select class="form-control wi-form-control" ng-model="wiModal.SelectedDataset"
+                                        ng-disabled="wiModal.createOp == 'backup'"
+                                        ng-options="dataset as dataset.properties.name for dataset in wiModal.datasets">
+                                    </select>
                                     </div>
                                     <label class="col-sm-2">Name</label>
                                     <div class="col-sm-4">
-                                        <input type="text" ng-model="wiModal.curveName">
+                                        <input type="text" class="form-control wi-form-control" ng-model="wiModal.curveName"
+                                        ng-disabled="wiModal.createOp == 'backup'">
                                     </div>
                                 </div>
                             </div>
