--- a/source/dialogs/histogram-format/histogram-format-modal.html
+++ b/source/dialogs/histogram-format/histogram-format-modal.html
@@ -195,7 +195,7 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.onApplyButtonClicked();" class="btn btn-default" ng-disabled="wiModal.isNotValid();">
+                <button ng-if='!wiModal.hideApply' type="button" ng-click="wiModal.onApplyButtonClicked();" class="btn btn-default" ng-disabled="wiModal.isNotValid();">
                     <span class="apply-16x16"></span>&nbsp;Apply
                 </button>
                 <button type="button" ng-click="wiModal.onOKButtonClicked();" class="btn btn-default" ng-disabled="wiModal.isNotValid();">
