--- a/source/dialogs/shading-attribute/shading-attribute-modal1.html
+++ b/source/dialogs/shading-attribute/shading-attribute-modal1.html
@@ -2,9 +2,9 @@
     <div class="modal-dialog" style="width: 700px">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()"
+                <!-- <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()"
                         aria-hidden="true">&times;
-                </button>
+                </button> -->
                 <h4 class="modal-title">Shading Attribute</h4>
             </div>
             <div class="modal-body normal-text">
@@ -38,35 +38,21 @@
                             </div>
                             <div class="row padding-bottom-1em">
                                 <div class="col-sm-4">
-                                    <!-- <select ng-model="wiModal.shadingOptions.idRightLine" name="curveName"
+                                    <select ng-model="wiModal.shadingOptions.idRightLine" name="curveName"
                                             class="form-control wi-form-control normal-text"
                                             ng-change="wiModal.shadingOptions.rightFixedValue = null;
                                             wiModal.setShadingName(wiModal.shadingOptions.idRightLine, wiModal.shadingOptions.idLeftLine);"
                                             ng-options="item.id as item.datasetCurve for item in wiModal.curvesOnDataset">
                                         <option></option>
-                                    </select> -->
-                                    <ui-select ng-model="wiModal.shadingOptions.rightLine">
-                                        <ui-select-match placeholder='Select a curve'>{{wiModal.shadingOptions.rightLine.name}}</ui-select-match>
-                                        <ui-select-choices group-by="'datasetName'"
-                                                    repeat='c as c in wiModal.curveList | filter: $select.search'>
-                                                    <div class="padding-left-20px">{{c.name}}</div>
-                                        </ui-select-choices>
-                                    </ui-select>
+                                    </select>
                                 </div>
                                 <div class="col-sm-4">
-                                    <!-- <select ng-model="wiModal.shadingOptions.idLeftLine" name="curveName"
+                                    <select ng-model="wiModal.shadingOptions.idLeftLine" name="curveName"
                                             class="form-control wi-form-control normal-text"
                                             ng-options="item.id as item.datasetCurve for item in wiModal.leftLimit"
                                             ng-change="wiModal.shadingOptions.leftFixedValue = null; wiModal.setLimit2(); wiModal.setShadingName(wiModal.shadingOptions.idRightLine, wiModal.shadingOptions.idLeftLine);"
                                             ng-disabled="!wiModal.shadingOptions.idRightLine">
-                                    </select> -->
-                                    <ui-select ng-model="wiModal.shadingOptions.leftLine">
-                                        <ui-select-match placeholder='Select a curve'>{{wiModal.shadingOptions.leftLine.name}}</ui-select-match>
-                                        <ui-select-choices group-by="'datasetName'"
-                                                    repeat='c as c in wiModal.curveList | filter: $select.search'>
-                                                    <div class="padding-left-20px">{{c.name}}</div>
-                                        </ui-select-choices>
-                                    </ui-select>
+                                    </select>
                                 </div>
                                 <div class="col-sm-4">
                                     <input type="number" ng-model="wiModal.shadingOptions.leftFixedValue"
@@ -74,7 +60,7 @@
                                             ng-change="wiModal.shadingOptions.idLeftLine = null;
                                             wiModal.setShadingName(wiModal.shadingOptions.idRightLine, wiModal.shadingOptions.idLeftLine); wiModal.shadingOptions.idLeftLine = -3"
                                             step="any"
-                                            ng-disabled="!wiModal.shadingOptions.rightLine">
+                                            ng-disabled="!wiModal.shadingOptions.idRightLine">
                                 </div>
                             </div>
                         </div>
@@ -85,14 +71,17 @@
                             <div class="col-sm-6">
                                 <select class="form-control wi-form-control normal-text"
                                         ng-model="wiModal.shadingOptions.shadingStyle">
-                                    <option value="fillPattern">Fill Pattern</option>
-                                    <option value="variableShading">Variable Shading</option>
+                                        <option value="fillPattern">Fill Pattern</option>
+                                        <option value="variableShading">Variable Shading</option>
+
+                                    <!-- <option ng-repeat="shadingStyle in wiModal.getShadingStyles()"
+                                        value="{{shadingStyle.value}}">{{shadingStyle.name}}</option> -->
                                 </select>
                             </div>
                         </div>
                     </div>
                     <hr class="margin-tb-5px">
-                    <div class="row padding-bottom-1em" ng-if="wiModal.shadingOptions.shadingStyle == 'fillPattern'">
+                    <div class="row padding-bottom-1em" ng-show="wiModal.shadingOptions.shadingStyle == 'fillPattern'">
                         <div class="container-fluid">
                             <div class="row padding-bottom-1em">
                                 <div class="form-group">
@@ -306,18 +295,10 @@
                                     <div class="form-group">
                                         <label class="control-label col-sm-7 padding-right-0">Shading Controlled by Curve</label>
                                         <div class="col-sm-5">
-                                            <!-- <select class="form-control wi-form-control normal-text"
+                                            <select class="form-control wi-form-control normal-text"
                                                     ng-model="wiModal.variableShadingOptions.idControlCurve"
-                                                    ng-options="item.id as item.name for item in wiModal.curves"
-                                                    ng-change="wiModal.selectedControlCurve(wiModal.variableShadingOptions.idControlCurve)"></select> -->
-                                            <ui-select ng-model="wiModal.variableShadingOptions.controlCurve"
-                                                        ng-change="wiModal.selectedControlCurve">
-                                                <ui-select-match placeholder='Select a curve'>{{wiModal.variableShadingOptions.controlCurve.properties.name}}</ui-select-match>
-                                                <ui-select-choices group-by="'datasetName'"
-                                                            repeat='c as c in wiModal.curves | filter: $select.search'>
-                                                            <div class="padding-left-20px">{{c.properties.name}}</div>
-                                                </ui-select-choices>
-                                            </ui-select>
+                                                    ng-options="item.id as item.datasetCurve for item in wiModal.selectCurve"
+                                                    ng-change="wiModal.selectedControlCurve(wiModal.variableShadingOptions.idControlCurve)"></select>
                                         </div>
                                     </div>
                                 </div>
@@ -831,11 +812,11 @@
             </div>
             <div class="modal-footer">
                 <button ng-click="wiModal.onOkButtonClicked()" class="btn btn-default">
-                    <span class="ok-16x16"></span>&nbsp;Ok
+                    <span class="ok-16x16"></span>&nbsp;Close
                 </button>
-                <button class="btn btn-default" ng-click="wiModal.onCancelButtonClicked()">
+                <!-- <button class="btn btn-default" ng-click="wiModal.onCancelButtonClicked()">
                     <span class="cancel-16x16"></span>&nbsp;Cancel
-                </button>
+                </button> -->
             </div>
         </div>
     </div>
