--- a/source/dialogs/shading-attribute/shading-attribute-modal.html
+++ b/source/dialogs/shading-attribute/shading-attribute-modal.html
@@ -45,7 +45,8 @@
                                             ng-options="item.id as item.datasetCurve for item in wiModal.curvesOnDataset">
                                         <option></option>
                                     </select> -->
-                                    <ui-select ng-model="wiModal.shadingOptions.rightLine">
+                                    <ui-select ng-model="wiModal.shadingOptions.rightLine"
+                                                ng-change="wiModal.onSelectRightLine();">
                                         <ui-select-match placeholder='Select a curve'>{{wiModal.shadingOptions.rightLine.name}}</ui-select-match>
                                         <ui-select-choices group-by="'datasetName'"
                                                     repeat='c as c in wiModal.curveList | filter: $select.search'>
@@ -61,7 +62,7 @@
                                             ng-disabled="!wiModal.shadingOptions.idRightLine">
                                     </select> -->
                                     <ui-select ng-model="wiModal.shadingOptions.leftLine"
-                                                ng-change="wiModal.setLimit2()">
+                                                ng-change="wiModal.setLimit2(); wiModal.onSelectLeftLine();">
                                         <ui-select-match placeholder='Select a curve'>{{wiModal.shadingOptions.leftLine.name}}</ui-select-match>
                                         <ui-select-choices group-by="'datasetName'"
                                                     repeat='c as c in wiModal.leftLimit | filter: $select.search'>
@@ -73,7 +74,7 @@
                                     <input type="number" ng-model="wiModal.shadingOptions.leftFixedValue"
                                             class="form-control wi-form-control normal-text"
                                             ng-change="wiModal.shadingOptions.idLeftLine = null;
-                                            wiModal.setShadingName(wiModal.shadingOptions.idRightLine, wiModal.shadingOptions.idLeftLine); wiModal.shadingOptions.idLeftLine = -3"
+                                            wiModal.setShadingName(wiModal.shadingOptions.idRightLine, wiModal.shadingOptions.idLeftLine); wiModal.typeFixedValue();"
                                             step="any"
                                             ng-disabled="!wiModal.shadingOptions.rightLine">
                                 </div>
