api error message

--- a/source/dialogs/error-message/error-message-modal.html
+++ b/source/dialogs/error-message/error-message-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCloseButtonClicked()" aria-hidden="true">&times;</button>
-                <h4>Error</h4>
+                <h4 class="color-error">Error</h4>
             </div>
             <div class="modal-body text-center padding-2em">
                 <span class="cancel-32x32-edit valign-middle"></span>
