--- a/source/dialogs/crossplot-format/crossplot-format-modal.html
+++ b/source/dialogs/crossplot-format/crossplot-format-modal.html
@@ -97,7 +97,7 @@
                                     </div>
                                 </div>
                                 <div class="row padding-bottom-0_5em">
-                                    <div class="col-sm-1 top-8px">Color</div>
+                                    <div class="col-sm-1 top-8px">Z Color</div>
                                     <div class="col-sm-2">
                                         <select ng-model="wiModal.crossplotModel.properties.pointsets[0].idCurveZ"
                                                 class="form-control wi-form-control"
