--- a/source/dialogs/crossplot-format/crossplot-format-modal.html
+++ b/source/dialogs/crossplot-format/crossplot-format-modal.html
@@ -22,12 +22,15 @@
 
                                 <div class="row padding-bottom-0_5em">
                                     <div class="col-sm-1 top-8px">X</div>
-                                    <div class="col-sm-2">
-                                        <select ng-model="wiModal.crossplotModel.properties.pointsets[0].idCurveX"
-                                                class="form-control wi-form-control"
-                                                ng-options="item.id as item.datasetCurve for item in wiModal.curvesOnDataset"
-                                                ng-change="wiModal.onselectedCurveXChange()"
-                                                ng-selected="wiModal.crossplotModel.properties.pointsets[0].idCurveX==item.id"></select>
+                                    <div class="col-sm-2"class="form-control wi-form-control">
+                                        <ui-select ng-model="wiModal.crossplotModel.properties.pointsets[0].idCurveX"
+                                        ng-change="wiModal.onselectedCurveXChange()">
+                                            <ui-select-match placeholder='Select a curve'>{{$select.selected.name}}</ui-select-match>
+                                            <ui-select-choices group-by="'datasetName'"
+                                                repeat='curve.id as curve in wiModal.curvesOnDataset | filter:{name:$select.search} track by curve.id'>
+                                                    <div class="padding-left-20px">{{curve.properties.name}}</div>
+                                            </ui-select-choices>
+                                        </ui-select>
                                     </div>
                                     <div class="col-sm-2">
                                         <label class="control-label col-sm-4 font-weight-normal">Left</label>
@@ -60,12 +63,15 @@
                                 </div>
                                 <div class="row padding-bottom-0_5em">
                                     <div class="col-sm-1 top-8px">Y</div>
-                                    <div class="col-sm-2">
-                                        <select ng-model="wiModal.crossplotModel.properties.pointsets[0].idCurveY"
-                                                class="form-control wi-form-control"
-                                                ng-options="item.id as item.datasetCurve for item in wiModal.curvesOnDataset"
-                                                ng-change="wiModal.onselectedCurveYChange()"
-                                                ng-selected="wiModal.crossplotModel.properties.pointsets[0].idCurveY==item.id"></select>
+                                    <div class="col-sm-2"class="form-control wi-form-control">
+                                        <ui-select ng-model="wiModal.crossplotModel.properties.pointsets[0].idCurveY"
+                                        ng-change="wiModal.onselectedCurveXChange()">
+                                            <ui-select-match placeholder='Select a curve'>{{$select.selected.name}}</ui-select-match>
+                                            <ui-select-choices group-by="'datasetName'"
+                                                repeat='curve.id as curve in wiModal.curvesOnDataset | filter:{name:$select.search} track by curve.id'>
+                                                    <div class="padding-left-20px">{{curve.properties.name}}</div>
+                                            </ui-select-choices>
+                                        </ui-select>
                                     </div>
                                     <div class="col-sm-2">
                                         <label class="control-label col-sm-4 font-weight-normal">Bottom</label>
@@ -98,13 +104,15 @@
                                 </div>
                                 <div class="row padding-bottom-0_5em">
                                     <div class="col-sm-1 top-8px">Z Color</div>
-                                    <div class="col-sm-2">
-                                        <select ng-model="wiModal.crossplotModel.properties.pointsets[0].idCurveZ"
-                                                class="form-control wi-form-control"
-                                                ng-options="item.id as item.datasetCurve for item in wiModal.curvesOnDataset"
-                                                ng-change="wiModal.onselectedCurveZChange()"
-                                                ng-selected="wiModal.crossplotModel.properties.pointsets[0].idCurveZ==item.id">
-                                        </select>
+                                    <div class="col-sm-2"class="form-control wi-form-control">
+                                        <ui-select ng-model="wiModal.crossplotModel.properties.pointsets[0].idCurveZ"
+                                        ng-change="wiModal.onselectedCurveXChange()">
+                                            <ui-select-match placeholder='Select a curve' allow-clear='true'>{{$select.selected.name}}</ui-select-match>
+                                            <ui-select-choices group-by="'datasetName'"
+                                                repeat='curve.id as curve in wiModal.curvesOnDataset | filter:{name:$select.search} track by curve.id'>
+                                                    <div class="padding-left-20px">{{curve.properties.name}}</div>
+                                            </ui-select-choices>
+                                        </ui-select>
                                     </div>
                                     <div class="col-sm-2">
                                         <label class="control-label col-sm-4 font-weight-normal">Min</label>
