--- a/source/dialogs/crossplot-format/crossplot-format-modal.html
+++ b/source/dialogs/crossplot-format/crossplot-format-modal.html
@@ -65,7 +65,7 @@
                                     <div class="col-sm-1 top-8px">Y</div>
                                     <div class="col-sm-2"class="form-control wi-form-control">
                                         <ui-select ng-model="wiModal.crossplotModel.properties.pointsets[0].idCurveY"
-                                        ng-change="wiModal.onselectedCurveXChange()">
+                                        ng-change="wiModal.onselectedCurveYChange()">
                                             <ui-select-match placeholder='Select a curve'>{{$select.selected.name}}</ui-select-match>
                                             <ui-select-choices group-by="'datasetName'"
                                                 repeat='curve.id as curve in wiModal.curvesOnDataset | filter:{name:$select.search} track by curve.id'>
@@ -106,7 +106,7 @@
                                     <div class="col-sm-1 top-8px">Z Color</div>
                                     <div class="col-sm-2"class="form-control wi-form-control">
                                         <ui-select ng-model="wiModal.crossplotModel.properties.pointsets[0].idCurveZ"
-                                        ng-change="wiModal.onselectedCurveXChange()">
+                                        ng-change="wiModal.onselectedCurveZChange()">
                                             <ui-select-match placeholder='Select a curve' allow-clear='true'>{{$select.selected.name}}</ui-select-match>
                                             <ui-select-choices group-by="'datasetName'"
                                                 repeat='curve.id as curve in wiModal.curvesOnDataset | filter:{name:$select.search} track by curve.id'>
