Fix bug overlay

--- a/source/dialogs/crossplot-format/crossplot-format-modal.html
+++ b/source/dialogs/crossplot-format/crossplot-format-modal.html
@@ -196,9 +196,9 @@
                                                 Overlay Lines
                                             </label>
                                             <div class="col-sm-10 padding-left-0" style="left: -10px">
-                                                <select class="form-control wi-form-control" ng-model="wiModal.selectedIdOverlayLine"
-                                                    ng-options="item.idOverlayLine as item.name for item in wiModal.overlayLines track by item.idOverlayLine">
-                                                    <option value="">-------------</option>
+                                                <select class="form-control wi-form-control" ng-model="wiModal.crossplotModel.properties.pointsets[0].idOverlayLine"
+                                                    ng-options="item.idOverlayLine as item.name for item in wiModal.overlayLines">
+                                                    <!--<option value="">-------------</option>-->
                                                 </select>
                                             </div>
                                         </div>
