--- a/source/html/index.html
+++ b/source/html/index.html
@@ -45,6 +45,7 @@
     <link rel="stylesheet" href="css/wi-comboview.css">
     <link rel="stylesheet" href="css/wi-d3-comboview.css">
 
+    <link rel="stylesheet" href="css/wi-curve-listing.css">
     <link href='css/wi-logplot.css' rel='stylesheet'>
     <link href='css/wi-crossplot.css' rel='stylesheet'>
     <link href='css/wi-histogram.css' rel='stylesheet'>
